// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders as a basic primary button group 1`] = `
<div
  className="buttonGroup85316350__root buttonGroup85316350---orientation-10-horizontal"
>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-7-primary Button368501032---vol-1-3"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders button group with all buttons disabled 1`] = `
<div
  className="buttonGroup85316350__root buttonGroup85316350---orientation-10-horizontal"
>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-3"
    disabled={true}
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-3"
    disabled={true}
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-3"
    disabled={true}
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders buttons with additional class name 1`] = `
<div
  className="buttonGroup85316350__root buttonGroup85316350---orientation-10-horizontal"
>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-4 btn-group-group-applied"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-5 btn-group-group-applied btn-group-btn-item-applied"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-4 btn-group-group-applied"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders buttons with correct style class if overridden 1`] = `
<div
  className="buttonGroup85316350__root buttonGroup85316350---orientation-10-horizontal"
>
  <button
    className="Button368501032__root Button368501032---tone-1-2 Button368501032---variant-5-quiet Button368501032---vol-1-4 btn-group"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-3 Button368501032---variant-5-quiet Button368501032---vol-1-5 btn-group btn-group-btn-override"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-2 Button368501032---variant-5-quiet Button368501032---vol-1-4 btn-group"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders child buttons with style classes for #tone, #variant, #vol and #buttonClassName 1`] = `
<div
  className="buttonGroup85316350__root buttonGroup85316350---orientation-10-horizontal"
>
  <button
    className="Button368501032__root Button368501032---tone-1-6 Button368501032---variant-9-secondary Button368501032---vol-1-6 button-group-test"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-6 Button368501032---variant-9-secondary Button368501032---vol-1-6 button-group-test"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-6 Button368501032---variant-9-secondary Button368501032---vol-1-6 button-group-test"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders vertical button group 1`] = `
<div
  className="buttonGroup85316350__root buttonGroup85316350---orientation-8-vertical"
>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-1"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-1"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button368501032__root Button368501032---tone-1-1 Button368501032---variant-5-quiet Button368501032---vol-1-1"
    onBlur={null}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button368501032__inner"
    >
      Three
    </span>
  </button>
</div>
`;
